--- a/dashboard/src/App.css
+++ b/dashboard/src/App.css
@@ -19,7 +19,7 @@ body {
 }
 .page {
   margin-left: 120px;
-  background: #e5e5e5;
+  background: #9083d5;
   padding: 40px;
   height: 100vh;
   border-top-left-radius: 50px;
@@ -461,17 +461,17 @@ body {
 }
 
 .messages h1 {
-  color: #3939d9f2;
   margin-bottom: 30px;
   font-size: 2.3rem;
+  color: #fff;
 }
 .messages .banner {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  color: #fff;
 }
 .messages .banner .card {
-  background: #fff;
   border-radius: 12px;
   padding: 20px;
 }
